--- a/estilos/midiaquery.css
+++ b/estilos/midiaquery.css
@@ -8,6 +8,7 @@
 
     section#login{
         width: 80vw;
+        height: 320px;
     }
     section#login > div#imagem{
         float: left;
@@ -19,6 +20,10 @@
         float: right;
         width: 70%;
     }
+
+    div#formulario > p{
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width: 992px){
@@ -29,16 +34,25 @@
 
     section#login{
         width: 950px;
+        height: 420px;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1{
+        font-size: 2em;
+    }
+
+    div#formulario > p{
+        font-size: 1.2em;
     }
 
 }
