--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,14 +24,14 @@ section#login{
     background-color: white;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
 
     width: 250px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.500);
 
+    transform: translate(-50%, -50%);
     transition: width 0.2s, height 0.2s;
     transition-timing-function: ease;
 }
@@ -46,4 +46,81 @@ section#login > div#imagem{
 section#login > div#formulario{
     display: block;
     padding: 10px;
+}
+
+div#formulario > h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
+    position: relative;
+}
+
+form > div.campo{
+    width: 100%;
+    height: 40px;
+    display: block;
+    background-color: rgb(33, 240, 126);
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    text-align: center;
+    
+  
+}
+
+div.campo > label{
+    display: none;
+}
+
+input#ilogin{
+    transform: translateY(-21px);
+}
+
+input#isenha{
+    transform: translateY(-21px);
+}
+
+div.campo >span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+    transform: translateY(-10px);
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: rgb(33, 240, 126);
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-top: 30px;
+}
+
+form > input[type=submit]:hover{
+    background-color: rgb(24, 134, 72);
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    text-decoration: none;
+    background-color:rgb(33, 240, 126) ;
+    color: white;
+    border-radius: 8px;
+    margin-top: 10px;
+    height: 40px;
+    width: 100%;
+}
+
+a.botao:hover{
+    background-color: rgb(24, 134, 72);
 }
