--- a/estilos/style.css
+++ b/estilos/style.css
@@ -82,8 +82,6 @@ input#isenha{
 }
 
 div.campo >span{
-    display: flexbox;
-    align-items: center center;
     color: white;
     font-size: 2em;
     width: 40px;
@@ -92,7 +90,8 @@ div.campo >span{
 }
 
 form > input[type=submit]{
-    display: block;
+    display: flexbox;
+    align-items: center;
     font-size: 1em;
     width: 100%;
     height: 40px;
