--- a/estilos/style.css
+++ b/estilos/style.css
@@ -59,9 +59,11 @@ div#formulario > p{
 }
 
 form > div.campo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 40px;
-    display: block;
     background-color: rgb(33, 240, 126);
     padding: 10px;
     border-radius: 10px;
@@ -69,16 +71,14 @@ form > div.campo{
   
 }
 
+input.teste{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 div.campo > label{
     display: none;
-}
-
-input#ilogin{
-    transform: translateY(-21px);
-}
-
-input#isenha{
-    transform: translateY(-21px);
 }
 
 div.campo >span{
@@ -86,12 +86,15 @@ div.campo >span{
     font-size: 2em;
     width: 40px;
     padding: 5px;
-    transform: translateY(-10px);
+    transform: translateY(-2px);
+}
+
+a > span{
+    transform: translateY(8px);
+    padding: 2px;
 }
 
 form > input[type=submit]{
-    display: flexbox;
-    align-items: center;
     font-size: 1em;
     width: 100%;
     height: 40px;
